--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       var map;
         var x;
         function loadmaps(){
-            $.getJSON("https://api.thingspeak.com/channels/736011/fields/1/last.json?api_key=Z9K0P8OMYECIU376", function(result){
+            $.getJSON("https://api.thingspeak.com/channels/736011/fields/1/last.json?api_key=xxxx", function(result){
           
             var m = result;
             x=Number(m.field1);
                            //alert(x);
         });
-            $.getJSON("https://api.thingspeak.com/channels/736011/fields/2/last.json?api_key=Z9K0P8OMYECIU376", function(result){
+            $.getJSON("https://api.thingspeak.com/channels/736011/fields/2/last.json?api_key=XXXX", function(result){
           
             var m = result;
             y=Number(m.field2);
@@ -66,7 +66,7 @@
       }
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
-   <!--  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+  
   </head>
   <body>
     <div align="center">
